--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <h2 class="title">Gallery</h2>
             <div class="about-content">
                 <div class="column left">
-                   <video src="images/AyishaAfzal invitation.mp4" alt="Gallery" controls autoplay></a>
+                   <video src="images/AyishaAfzal invitation.mp4" alt="Gallery" controls></a>
                 </div>
                 <div class="column right">
                     <div class="text">"The most memorable moments in our life are captured as a special not because of the place or time, it's because of the person with whom we experience happiness"</div>
